--- a/about.html
+++ b/about.html
@@ -141,6 +141,23 @@
         <!-- end of testimonials -->
 
 
+        <!-- Invitation -->
+        <div class="reservation bg-blue">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="text-container">
+                            <h3>Kontak Kami</h3>
+                            <p class="p-large">Hubungi Kami Untuk Informasi Lebih Lanjut dan Kerjasama</p>
+                            <a class="btn-outline-reg mt-5" href="mailto:arifinstyawan89@gmail.com">Hubungi Kami</a>
+                        </div> 
+                    </div> 
+                </div> 
+            </div> 
+        </div> 
+        <!-- end of invitation -->
+
+
         <!-- Footer -->
         <div class="footer bg-gray">
             <div class="container">
