--- a/consultation-detail.html
+++ b/consultation-detail.html
@@ -83,25 +83,34 @@
         <!-- Form -->
         <div class="form" id="form">
             <div class="container">
+
+                <div class="row mb-3">
+                    <div class="col-lg-10 offset-lg-1">
+                        <a href="consultation.html" class="back">
+                            <i class="fas fa-backward"></i>
+                            <span>Kembali</span>
+                        </a>
+                    </div>
+                </div>
+
                 <div class="row">
                     <div class="col-lg-10 offset-lg-1">
                         
                         <div class="card border-0 shadow-sm py-3 px-3 bg-gray">
-                            <div class="card-body">
+                            <div class="card-body text-center">
                                 <h5>Rincian Konsultasi</h5>
                                 <hr>
-                                <p>Anda akan melakukan konsultasi online dengan <strong>drh. Kama</strong></p>
+                                <p>Anda akan melakukan konsultasi online dengan <strong>drh. Ratna</strong></p>
                                 <ul class="list-unstyled li-space-lg">
                                     <li class="d-flex">
-                                        <!-- <i class="fas fa-square"></i> -->
                                         <div class="flex-grow-1">Durasi : <span class="badge bg-secondary">20 Menit</span></div>
                                     </li>
                                     <li class="d-flex">
-                                        <!-- <i class="fas fa-square"></i> -->
                                         <div class="flex-grow-1">Biaya : <span class="badge bg-secondary">Rp 20.000,-</span></div>
                                     </li>
                                 </ul>
-                                <a href="consultation-form.html" class="btn-solid-sm mt-4">Lanjut</a>
+                                <p>Pembayaran melalui transfer bank berikut <strong>Rek: 8956xxxx</strong></p>
+                                <a href="consultation-form.html" class="btn-solid-sm mt-4">Lanjut</a><br>
                             </div>
                         </div>
 
