--- a/consultation.html
+++ b/consultation.html
@@ -100,7 +100,7 @@
                                 <h6 class="card-title">Drh. Ratna
                                     <span class="position-absolute top-0 start-100 translate-middle p-2 bg-success border border-light rounded-circle"></span>
                                 </h6>
-                                <a class="btn-solid-sm mt-3" data-bs-toggle="modal" data-bs-target="#detailsModal1">Chat</a>
+                                <a class="btn-solid-sm mt-3" href="consultation-detail.html">Chat</a>
                             </div>
                         </div>
                         <!-- end of card -->
@@ -114,7 +114,7 @@
                                 <h6 class="card-title">Drh. Kama
                                     <span class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle"></span>
                                 </h6>
-                                <a class="btn-solid-sm mt-3" href="consultation-detail.html">Chat</a>
+                                <a class="btn-solid-sm mt-3">Chat</a>
                             </div>
                         </div>
                         <!-- end of card -->
@@ -128,7 +128,7 @@
                                 <h6 class="card-title">Drh. Ratna
                                     <span class="position-absolute top-0 start-100 translate-middle p-2 bg-success border border-light rounded-circle"></span>
                                 </h6>
-                                <a class="btn-solid-sm mt-3" data-bs-toggle="modal" data-bs-target="#detailsModal3">Chat</a>
+                                <a class="btn-solid-sm mt-3" href="consultation-detail.html">Chat</a>
                             </div>
                         </div>
                         <!-- end of card -->
@@ -139,7 +139,7 @@
                                 <img class="img-fluid" src="images/instructor-1.jpg" alt="alternative">
                             </div>
                             <div class="card-body">
-                                <h6 class="card-title">Drh. Ratna
+                                <h6 class="card-title">Drh. Putri
                                     <span class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle"></span>
                                 </h6>
                                 <a class="btn-solid-sm mt-3" href="#">Chat</a>
