--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <div class="col-lg-6 col-xl-5">
                         <div class="text-container">
                             <h2><span>Konsultasi dengan dokter hewan</span><br> sekarang bisa dari rumah</h2>
-                            <p>Maecenas fringilla quam posuere, pellentesque est nec, gravida turpis. Integer vitae mollis felis. Integer id quam id tellus hendrerit laciniad binfer</p>
+                            <p>Kami menyediakan solusi praktis dan mudah bagi pemilik hewan peliharaan yang ingin berkonsultasi dengan dokter hewan berkualitas tinggi tanpa harus keluar rumah.</p>
                             <!-- <p>Sed id dui rutrum, dictum urna eu, accumsan turpis. Fusce id auctor velit, sed viverra dui rem dina</p> -->
                             <a class="btn-solid-reg" href="consultation.html">Chat dokter</a>
                         </div> 
@@ -130,37 +130,37 @@
                             <div class="element-item development">
                                 <a href="article-detail.html">
                                     <img class="img-fluid" src="images/article-1.png" alt="alternative">
-                                    <p><strong>Jose</strong> - pellentesque tincidunt leo eu laoreedt integer quis vanos compren</p>
+                                    <!-- <p><strong>Jose</strong> - pellentesque tincidunt leo eu laoreedt integer quis vanos compren</p> -->
                                 </a>
                             </div>
                             <div class="element-item development">
                                 <a href="article-detail.html">
                                     <img class="img-fluid" src="images/article-2.png" alt="alternative">
-                                    <p><strong>Jose</strong> - odio semper, interdum orci molestie, mattis lectus pellentesq aliqu</p>
+                                    <!-- <p><strong>Jose</strong> - odio semper, interdum orci molestie, mattis lectus pellentesq aliqu</p> -->
                                 </a>
                             </div>
                             <div class="element-item development">
                                 <a href="article-detail.html">
                                     <img class="img-fluid" src="images/article-3.png" alt="alternative">
-                                    <p><strong>Jose</strong> - arcu a neque congue finibus doneci malesuada et purus melan bris</p>
+                                    <!-- <p><strong>Jose</strong> - arcu a neque congue finibus doneci malesuada et purus melan bris</p> -->
                                 </a>
                             </div>
                             <div class="element-item design development">
                                 <a href="article-detail.html">
                                     <img class="img-fluid" src="images/article-4.png" alt="alternative">
-                                    <p><strong>Jose</strong> - id aliquam ut malesuada eros utr varius blandit aliquam tinci bist</p>
+                                    <!-- <p><strong>Jose</strong> - id aliquam ut malesuada eros utr varius blandit aliquam tinci bist</p> -->
                                 </a>
                             </div>
                             <div class="element-item design development">
                                 <a href="article-detail.html">
                                     <img class="img-fluid" src="images/article-5.png" alt="alternative">
-                                    <p><strong>Jose</strong> - magna a feugiat cras a semper tellus in rhoncus vehicula tellus rugo</p>
+                                    <!-- <p><strong>Jose</strong> - magna a feugiat cras a semper tellus in rhoncus vehicula tellus rugo</p> -->
                                 </a>
                             </div>
                             <div class="element-item design marketing">
                                 <a href="article-detail.html">
                                     <img class="img-fluid" src="images/article-6.png" alt="alternative">
-                                    <p><strong>Jose</strong> - vel sodales dolor donec a est sapien integer pharetr bilom conva</p>
+                                    <!-- <p><strong>Jose</strong> - vel sodales dolor donec a est sapien integer pharetr bilom conva</p> -->
                                 </a>
                             </div>
                         </div>
@@ -180,9 +180,9 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="text-container">
-                            <h4>Booking Rencana Kedatangan Anda Ke Klinik Kami</h4>
-                            <p class="p-large">Ac tristique velit sapien vitae eros. Praesent ut erat a tellus cursus pharetra finibus posuere nisi. Vivamus feugiat tincidunt sem pre toro</p>
-                            <a class="btn-outline-reg mt-5" href="reservation.html">Booking sekarang</a>
+                            <h3>Anda perlu datang ke klinik? Buat janji sekarang!</h3>
+                            <p class="p-large">Layanan reservasi kunjungan klinik memberikan kemudahan kepada Anda dan hewan peliharaan Anda. Hanya dengan beberapa kali klik, Anda dapat memesan jadwal kunjungan klinik sesuai kebutuhan Anda.</p>
+                            <a class="btn-outline-reg mt-5" href="reservation.html">Reservasi sekarang</a>
                         </div> 
                     </div> 
                 </div> 
@@ -218,7 +218,7 @@
                             <!-- Accordion 2 -->
                             <div class="accordion-item">
                                 <div class="accordion-icon">
-                                    <span class="fas fa-solid fa-stethoscope"></span>
+                                    <span class="fas fa-solid fa-paw"></span>
                                 </div> 
                                 <div class="accordion-header" id="headingTwo">
                                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
@@ -234,7 +234,7 @@
                             <!-- Accordion 3 -->
                             <div class="accordion-item">
                                 <div class="accordion-icon">
-                                    <span class="fas fa-solid fa-thumbs-up"></span>
+                                    <span class="fas fa-solid fa-paw"></span>
                                 </div> 
                                 <div class="accordion-header" id="headingFour">
                                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
@@ -250,7 +250,7 @@
                             <!-- Accordion 4 -->
                             <div class="accordion-item">
                                 <div class="accordion-icon">
-                                    <span class="fas fa-solid fa-thumbs-up"></span>
+                                    <span class="fas fa-solid fa-paw"></span>
                                 </div> 
                                 <div class="accordion-header" id="headingFour">
                                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
