--- a/register.html
+++ b/register.html
@@ -40,7 +40,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control form-control-user" id="exampleInputEmail" placeholder="example@gmail.com">
+                                    <input type="email" class="form-control form-control-user" id="exampleInputEmail" placeholder="Email Anda">
                                 </div>
                                 <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-0">
@@ -53,17 +53,13 @@
                                 <a href="login.html" class="btn btn-primary btn-user btn-block">
                                     Registrasi
                                 </a>
-                                <hr>
-                                <a href="index.html" class="btn btn-google btn-user btn-block">
-                                    <i class="fab fa-google fa-fw"></i> Registrasi dengan Google
-                                </a>
                             </form>
                             <hr>
                             <div class="text-center">
                                 <a class="small" href="forgot-password.html">Lupa Password?</a>
                             </div>
                             <div class="text-center">
-                                <a class="small" href="login.html">Sudah memiliki akun? Masuk!</a>
+                                <a class="small" href="login.html">Sudah punya akun? Masuk!</a>
                             </div>
                         </div>
                     </div>
